# kortalk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/kortalk/: __init__.py  app.py  config.py  hotkeys.py  i18n.py  providers.py  session.py  settings_dialog.py  theme.py  windows.py
tests/: conftest.py  test_app.py  test_config.py  test_i18n.py  test_settings_dialog.py  test_windows.py
